[gd_scene load_steps=4 format=3 uid="uid://cdhl80kie5osp"]

[ext_resource type="Script" path="res://addons/resource_manager/loot_table_manager/table_row_inputs/min_and_max_effects/min_and_max_effects_row.gd" id="1_dtu8b"]
[ext_resource type="PackedScene" uid="uid://bdwcfmuloc2np" path="res://addons/resource_manager/effects_manager/effect_slider.tscn" id="2_ayfqi"]
[ext_resource type="Texture2D" uid="uid://dgvnyf5b7lo3r" path="res://addons/resource_manager/icons/trash_icon.png" id="3_otlhr"]

[node name="MinAndMaxEffectsRow" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_constants/separation = 32
script = ExtResource("1_dtu8b")

[node name="EffectSlider" parent="." instance=ExtResource("2_ayfqi")]
layout_mode = 2
size_flags_horizontal = 3
max = 30

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_otlhr")

[connection signal="max_changed" from="EffectSlider" to="." method="_on_effect_max_changed"]
[connection signal="min_changed" from="EffectSlider" to="." method="_on_effect_min_changed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
